<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackGroundApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/desc_fab_like"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favorite_border" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/desc_bg_img"
        app:layout_constraintBottom_toTopOf="@+id/tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/colorPrimary" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/pic_search_empty" />

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_avatar"
        tools:text="Username" />

    <TextView
        android:id="@+id/tv_display_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_follower"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_display_following"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_display_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_following"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_display_follower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_display_follower"
        app:layout_constraintTop_toTopOf="@+id/tv_display_follower" />

    <TextView
        android:id="@+id/tv_detail_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_display_follower"
        app:layout_constraintStart_toStartOf="@+id/tv_display_follower"
        app:layout_constraintTop_toBottomOf="@+id/tv_display_follower"
        app:layout_constraintVertical_bias="0.1"
        tools:text="64" />

    <TextView
        android:id="@+id/tv_detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_follower"
        app:layout_constraintEnd_toEndOf="@+id/tv_display_following"
        app:layout_constraintStart_toStartOf="@+id/tv_display_following"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_follower"
        app:layout_constraintVertical_bias="0.1"
        tools:text="21" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_username"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"/>

    <ProgressBar
        android:id="@+id/progress_bar_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/img_detail_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_detail_avatar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/colorPrimary"
        android:contentDescription="@string/desc_tabs_follow"
        android:theme="@style/TabTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_follower"
        app:tabBackground="@drawable/bg_tab_selector"
        app:tabIndicatorHeight="0dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

    <ImageView
        android:id="@+id/img_detail_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/desc_img_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/img_detail_avatar"
        app:layout_constraintEnd_toEndOf="@+id/img_detail_avatar"
        app:layout_constraintStart_toStartOf="@+id/img_detail_avatar"
        app:layout_constraintTop_toTopOf="@+id/img_detail_avatar"
        app:srcCompat="@drawable/pic_error" />

    <TextView
        android:id="@+id/tv_detail_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:text="@string/search_error"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username" />


</androidx.constraintlayout.widget.ConstraintLayout>
